# rustcms

./: .env.example  .gitignore  Cargo.toml  Makefile.toml  README.md  package.json  server-config.json  tailwind.config.js
.cargo/: config.toml
rustcms-app/: Cargo.toml
rustcms-srv/: Cargo.toml  build.rs
rustcms-srv/.cargo/: config.toml
rustcms-srv/resources/: logo.txt
rustcms-srv/resources/migrations/: 0000_init.down.surql  0000_init.up.surql
rustcms-srv/resources/queries/accounts/: create_account.surql  delete_account.surql  find_auth_by_credentials.surql  find_auth_by_refresh_token.surql
rustcms-srv/resources/queries/cache/: check_roles_has_permission.surql  create_roles_with_permissions.surql  export_roles_to_cache.surql  init_cache.surql
rustcms-srv/resources/queries/middleware/: create_refresh_token.surql  delete_refresh_token.surql  update_refresh_token.surql
rustcms-srv/resources/queries/permissions/: create_permission.surql  delete_permission.surql  get_permissions.surql  update_permission.surql
rustcms-srv/resources/queries/prelude/: check_initial_migration.surql  delete_expired_tokens.surql  find_root_account.surql
rustcms-srv/resources/queries/roles/: find_roles_with_permissions.surql  get_roles.surql
rustcms-srv/resources/queries/utils/: get_metadata.surql
rustcms-srv/src/: main.rs
rustcms-srv/src/app/: api.rs  mod.rs  router.rs  state.rs
rustcms-srv/src/app/errors/: auth.rs  database.rs  error.rs  mod.rs
rustcms-srv/src/controllers/: mod.rs
rustcms-srv/src/controllers/account/: delete.rs  register.rs
rustcms-srv/src/controllers/accounts/: delete.rs  mod.rs  register.rs
rustcms-srv/src/controllers/auth/: authorize.rs  mod.rs  revoke.rs  token.rs
rustcms-srv/src/controllers/permissions/: create.rs  delete.rs  list.rs  mod.rs  update.rs
rustcms-srv/src/controllers/roles/: list.rs  mod.rs
rustcms-srv/src/controllers/utils/: healthcheck.rs  mod.rs
rustcms-srv/src/models/: auth_state.rs  metadata.rs  mod.rs  permission.rs  permission_capabilities.rs  role.rs  role_permissions.rs
rustcms-srv/src/repositories/: mod.rs
rustcms-srv/src/repositories/account/: auth.rs  mod.rs  repository.rs
rustcms-srv/src/repositories/accounts/: auth.rs  repository.rs
rustcms-srv/src/repositories/cache/: mod.rs  repository.rs
rustcms-srv/src/repositories/middleware/: mod.rs  token.rs
rustcms-srv/src/repositories/permissions/: mod.rs  repository.rs
rustcms-srv/src/repositories/role/: mod.rs  repository.rs
rustcms-srv/src/repositories/roles/: repository.rs
rustcms-srv/src/repositories/utils/: repository.rs
rustcms-srv/src/services/: config.rs  database.rs  logger.rs  mod.rs  redirect.rs  shutdown.rs  shutdown.rs~
rustcms-srv/src/services/middleware/: auth_state.rs  claims.rs  jwt_keys.rs  mod.rs  oauth_google.rs  response.rs  storage.rs  validator.rs
rustcms-srv/srv-macros/: Cargo.toml
rustcms-srv/srv-macros/src/: lib.rs
rustcms-ui/: Cargo.toml  Dioxus.toml  index.html  input.css
rustcms-ui/resources/css/: input.css
rustcms-ui/resources/i18n/: en-US.ftl  uk-UA.ftl
rustcms-ui/resources/js/: host_url.js  sw_present_check.js  sw_register.js
rustcms-ui/resources/www/: sw.js
rustcms-ui/src/: main.rs
rustcms-ui/src/app/: mod.rs  router.rs  state.rs
rustcms-ui/src/components/: dialog.rs  language_controller.rs  mod.rs  profile_controller.rs  search_bar.rs  theme_controller.rs
rustcms-ui/src/components/icons/: alert.rs  language.rs  mod.rs  moon.rs  sun.rs  theme.rs  theme_colors.rs
rustcms-ui/src/elements/: footer.rs  header.rs  layout.rs  main_menu.rs  mod.rs
rustcms-ui/src/macros/: dialogs.rs  mod.rs  requests.rs
rustcms-ui/src/pages/: home.rs  loading.rs  mod.rs  sign_in.rs
rustcms-ui/src/services/: form_event.rs  local_storage.rs  mod.rs  response.rs
