[package]
resolver = "3"
name = "rustcms-ui"
description = "Rust CMS: WASM UI"
edition.workspace = true
version.workspace = true
keywords.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
dioxus = { version = "0.6.3", features = ["web", "router", "logger"] }
